--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,11 +25,11 @@
 				</div>
 				<div style="display: flex;">
 					<div style="padding: 1rem; ">
-						<div class="menu_button menu_button_small" id="menu_tutorial" onclick="location.href='{{url_for('tutorial')}}';">
+						<div class="menu_button menu_button_small" id="menu_honorifics" onclick="location.href='{{url_for('honorifics')}}';">
 							<div class="button_icon">
-								<ion-icon name="help"></ion-icon>
+								<ion-icon name="earth"></ion-icon>
 							</div>
-							<div class="button_title"> Tutorial </div>
+							<div class="button_title"> Honorifics </div>
 						</div>
 					</div>
 					<div style="padding: 1rem; ">
