--- a/app/templates/misc/super_navpanel.html
+++ b/app/templates/misc/super_navpanel.html
@@ -16,6 +16,10 @@
 			href="{{url_for('honorifics')}}" title="Honorifics">
 			<ion-icon name="earth"></ion-icon>
 		</a>
+		<a role="button" class="btn btn-sm super_navpanel_btn" id="super_navpanel_settings_btn"
+			href="{{url_for('settings')}}" title="Settings">
+			<ion-icon name="settings"></ion-icon>
+		</a>
 		<a role="button" class="btn btn-elegant btn-sm super_navpanel_btn" id="super_navpanel_back_btn"
 			href="{{back_href}}">
 			<span> Back </span>
