--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -49,13 +49,13 @@
 			<div class="library_body">
 				<div class="superpanel" id="library_superpanel">
 					<!-- Register button -->
-					<button type="button" class="btn btn-light-green superpanel_menu_btn modal_trigger" id="menu_library_register_btn" data-toggle="modal"
+					<button type="button" class="btn btn-light-green superpanel_menu_btn library_superpanel_menu_btn modal_trigger" id="menu_library_register_btn" data-toggle="modal"
 						data-target="#register_novel_modal_push" title="Add Series">
 						<ion-icon name="add-outline"></ion-icon>
 						<span> Register </span>
 					</button>
 					<!-- Update button -->
-					<button type="button" class="btn btn-yellow superpanel_menu_btn" id="menu_library_update_btn" title="Update Library" {{'disabled' if series|length == 0}}>
+					<button type="button" class="btn btn-yellow superpanel_menu_btn library_superpanel_menu_btn" id="menu_library_update_btn" title="Update Library" {{'disabled' if series|length == 0}}>
 						<ion-icon name="sync-outline"></ion-icon>
 						<span> Update </span>
 					</button>
