--- a/app/templates/subcomponents/honorific_entry.html
+++ b/app/templates/subcomponents/honorific_entry.html
@@ -16,9 +16,9 @@
 		</div>
 		<div class="honorific_entry_body">
 			<div class="honorific_entry_details">
-				<span class="honorific_span">{{honorific.raw}}</span>
+				<span class="honorific_span notranslate">{{honorific.raw}}</span>
 				&rarr;
-				<span class="honorific_span">{{honorific.trans}}</span>
+				<span class="honorific_span notranslate">{{honorific.trans}}</span>
 			</div>
 			<div class="honorific_entry_action_bar">
 				<div class="honorific_entry_action_div honorific_entry_edit">
