--- a/app/templates/series_toc.html
+++ b/app/templates/series_toc.html
@@ -26,20 +26,22 @@
 			<div class="toc_body">
 				<div class="toc_menu_listing">
 					<div class="toc_menu_options">
-						<button type="button" class="btn btn-success superpanel_menu_btn" id="jump_to_curr_btn" title="Jump to the chapter you left off">
-							<ion-icon name="code-download-outline"></ion-icon>
-							<span>Current</span>
-						</button>
-						<button type="button" class="btn btn-yellow superpanel_menu_btn" id="update_series_btn" title="Fetch the latest chapter"
-							action="{{url_for('library_series_update', series_code=series.code)}}">
-							<ion-icon name="sync-outline"></ion-icon>
-							<span>Update</span>
-						</button>
-						<a type="button" class="btn btn-amber superpanel_menu_btn" id="series_dictionary_btn" title="Edit this series' dictionary"
-							href="{{url_for('dictionaries_edit', dict_fname=dict_fname)}}">
-							<ion-icon name="reader-outline"></ion-icon>
-							<span>Dictionary</span>
-						</a>
+						<div style="flex-grow: 1">
+							<button type="button" class="btn btn-success superpanel_menu_btn" id="jump_to_curr_btn" title="Jump to the chapter you left off">
+								<ion-icon name="code-download-outline"></ion-icon>
+								<span>Current</span>
+							</button>
+							<button type="button" class="btn btn-yellow superpanel_menu_btn" id="update_series_btn" title="Fetch the latest chapter"
+								action="{{url_for('library_series_update', series_code=series.code)}}">
+								<ion-icon name="sync-outline"></ion-icon>
+								<span>Update</span>
+							</button>
+							<a type="button" class="btn btn-amber superpanel_menu_btn" id="series_dictionary_btn" title="Edit this series' dictionary"
+								href="{{url_for('dictionaries_edit', dict_fname=dict_fname)}}">
+								<ion-icon name="reader-outline"></ion-icon>
+								<span>Dictionary</span>
+							</a>
+						</div>
 						<button type="button" class="btn btn-danger superpanel_menu_btn" id="rmv_all_bkmk_btn" title="Remove all bookmarks under this series"
 							action="{{url_for('library_series_toc_bookmark_all', series_code=series.code)}}" {{'disabled' if series.latest_ch == 0}}>
 							<ion-icon name="bookmarks" style="font-size: 1rem; margin-bottom: -0.1rem;"></ion-icon>
@@ -58,8 +60,6 @@
 
 				<!-- Mainpanel -->
 				<div class="toc_main" id="toc_mainpanel">
-					<div class="toc_pagination">
-					</div>
 					<div class="toc_chapter_listing">
 						{% if series.latest_ch == 0 %}
 							<!-- No chapters to display -->
@@ -73,32 +73,49 @@
 							</div>
 						{% else %}
 							<!-- Non-empty chapter directory -->
-							{% for index in range(series.latest_ch) %}
-								{% set ch = index + 1 %}
-
-								{% set series_base_url = url_for('library_series_chapter', series_code=series.code, ch=ch) %}
-								{% set bookmark_url = url_for('library_series_toc_bookmark', series_code=series.code, ch=ch) %}
-								{% set setcurrent_url = url_for('library_series_toc_setcurrent', series_code=series.code, ch=ch) %}
-
-								{% set visited = ch < series.current_ch %}
-								{% set current = ch == series.current_ch %}
-								{% set bookmarked = ch in series.bookmarks %}
-
-								<div class="toc_chapter {{'viewed_chapter' if visited}} {{'current_chapter' if current}} {{'bookmarked_chapter' if bookmarked}}" id="{{ch}}">
-									<a class="toc_chapter_text" href="{{series_base_url}}"> <!--Open chapters in new tab by defualt: target="_blank"-->
-										Chapter {{ch}}
-									</a>
-									<div class="toc_chapter_actionbar {{'active_actionbar' if bookmarked}}">
-										<div class="toc_chapter_setcurrent " action="{{setcurrent_url}}" id="setcurrent_form_{{ch}}" title="Set this as the current chapter">
-											<ion-icon name="code-download-outline" style="margin-bottom: -0.5rem"></ion-icon>
-										</div>
-										<div class="toc_chapter_bookmark {{'active_bookmark' if bookmarked}}" action="{{bookmark_url}}" id="bookmark_form_{{ch}}"
-											title="Toggle bookmark">
-											<ion-icon name="bookmark{{'-outline' if not bookmarked}}" style="margin-bottom: -0.5rem"></ion-icon>
+							<ol class="toc_content_list">
+							{% for volume in series.volumes %}
+								<li class="toc_volume">
+									<div style="display: flex;">
+										<div class="toc_volume_mark"></div>
+										<div class="toc_volume_number">
+											Volume {{volume.number}}
 										</div>
 									</div>
-								</div>
+									<div class="toc_volume_title">
+										{{volume.title}}
+									</div>
+								</li>
+								{% for ch in volume.chapters %}
+									{% set chapter_url = url_for('library_series_chapter', series_code=series.code, ch=ch.number) %}
+									{% set bookmark_url = url_for('library_series_toc_bookmark', series_code=series.code, ch=ch.number) %}
+									{% set setcurrent_url = url_for('library_series_toc_setcurrent', series_code=series.code, ch=ch.number) %}
+
+									{% set visited = ch.number < series.current_ch %}
+									{% set current = ch.number == series.current_ch %}
+									{% set bookmarked = ch.number in series.bookmarks %}
+
+									<div class="toc_chapter {{'viewed_chapter' if visited}} {{'current_chapter' if current}} {{'bookmarked_chapter' if bookmarked}}" id="{{ch.number}}">
+										<a class="toc_chapter_link" href="{{chapter_url}}">
+											<div class="toc_chapter_text"> Chapter {{ch.number}} </div>
+											<div class="toc_chapter_title"> {{ch.title}} </div>
+										</a>
+										<div class="toc_chapter_actionbar {{'active_actionbar' if bookmarked}}">
+											<div class="toc_chapter_setcurrent " action="{{setcurrent_url}}" id="setcurrent_form_{{ch.number}}" title="Set this as the current chapter">
+												<ion-icon name="code-download-outline"></ion-icon>
+											</div>
+											<div class="toc_chapter_bookmark {{'active_bookmark' if bookmarked}}" action="{{bookmark_url}}" id="bookmark_form_{{ch.number}}"
+												title="Toggle bookmark">
+												<ion-icon name="bookmark{{'-outline' if not bookmarked}}"></ion-icon>
+											</div>
+										</div>
+										<div class="toc_chapter_date">
+											{{ ch.date_posted.strftime('%m-%d-%Y') }}
+										</div>
+									</div>
+								{% endfor %}
 							{% endfor %}
+							</ol>
 						{% endif %}
 					</div>
 				</div>
